[package]
name = "mc-proxy_server"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync"] }
uuid = { version = "1.22.0", features = ["v4"] }

egui = { version = "0.34.1", features = [] }
eframe = { version = "0.34.1", features = [] }
egui_extras = { version = "0.34.1", features = ["all_loaders"] }

chrono = { version = "0.4.44", features = [] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = [] }
directories = { version = "6.0.0", features = [] }